@@ -1,4 +1,14 @@
+2004-05-04  Andreas Kupries  <andreask@activestate.com>
+
+	* mpformats/_nroff.tcl: Fixed [SF Tcllib Bug 943146]. Added markup
+	* mpformats/fmt.nroff: protection code like already in use for
+	                       HTML and XML to handle nroff's special
+	                       characters, i.e. the backslash properly.
+	                       Also fixed handling of leading dashes in
+	                       'opt_def'.
+
 2004-04-22  Joe English  <jenglish@users.sourceforge.net>
+
 	* mpformats/fmt.xml: BUGFIX: "puts stderr" ==> "puts_stderr".
 	
 2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
